--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -63,7 +63,6 @@ footer {
 .red-icon{
     background-color: #FFFFFF;
     color: #C00;
-    color: red;
 }
 .marker-indicator-space{
   margin-right: 2em;
@@ -148,7 +147,7 @@ accordion .panel-heading:hover {
 }
 .counter-btn {
    font-size: 25.5pt;
-   padding: 0.1em, 0.2em;
+   padding: 0.1em 0.2em;
    height: 2.2em;
 }
 .counter-input{
@@ -236,14 +235,14 @@ tr.disabled, tr.disabled span.text-info{
 .bold-text{
   font-weight: bold;
 }
-.cold-store-vaccines>.panel-heading, tr.cold-store-vaccines, tr cold-store-vaccines{
+.cold-store-vaccines>.panel-heading, tr.cold-store-vaccines, tr .cold-store-vaccines{
   background-color: #157085;
   color: #FFFFFF;
 }
 .cold-store-vaccines{
   border-color: #157085;
 }
-.dry-store-safety-boxes>.panel-heading, .dry-store-syringes>.panel-heading, tr.dry-store-syringes, tr dry-store-syringes {
+.dry-store-safety-boxes>.panel-heading, .dry-store-syringes>.panel-heading, tr.dry-store-syringes, tr .dry-store-syringes {
   background-color: #8B4A09;
   color: #FFFFFF;
 }
@@ -277,4 +276,19 @@ tr.disabled, tr.disabled span.text-info{
     background:none !important;
     border-left: 4px solid #6eca97 !important;
     border-right: 4px solid #6eca97 !important;
+}
+.serial-list{
+  position: relative;
+  display: block;
+  padding: 5px 15px;
+  margin-bottom: -1px;
+  background-color: #f1f1f1;
+  border: 2px solid #dddddd;
+}
+.serial-btn{
+  margin-top: 3px;
+  margin-right: 3px;
+}
+.pb10{
+  padding-bottom: 10px;
 }
