refactor(analytics): use extracted module
Closes #77.

--- a/app/views/app-config/wizard/partials/facility-cce-profile-setup.html
+++ b/app/views/app-config/wizard/partials/facility-cce-profile-setup.html
@@ -7,14 +7,14 @@
         <div class="panel"></div>
         <div class="btn-group btn-group-justified">
             <div class="btn-group">
-                <button ga-click="facility_setup" type="button" class="btn btn-default btn-lg btn-left"
+                <button eha-ga-click="facility_setup" type="button" class="btn btn-default btn-lg btn-left"
                         ng-click="moveTo(STEP_FOUR)">
                     <span><i class="fa fa-arrow-circle-left"></i></span>
                     <span translate>Back</span>
                 </button>
             </div>
             <div class="btn-group">
-                <button type="submit" ga-click="sequence_map" class="btn btn-success btn-lg btn-right"
+                <button type="submit" eha-ga-click="sequence_map" class="btn btn-success btn-lg btn-right"
                         ng-click="moveTo(STEP_SIX)">
                     <span translate>Continue</span>
                     <span><i class="fa fa-arrow-circle-right"></i></span>
