--- a/app/views/bundles/partials/facility/select-recent-facility.html
+++ b/app/views/bundles/partials/facility/select-recent-facility.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12">
     <select ng-class="{ 'form-control': true, 'has-error': selectFacilityError}"
-            ga-click="select_facility"
+            eha-ga-click="select_facility"
             ng-model="placeholder.selectedFacility"
             ng-change="setFacility()" ng-required="true">
         <option value="" ng-bind="selectFacility"></option>
