--- a/app/views/home/partials/discard-count-reminder.html
+++ b/app/views/home/partials/discard-count-reminder.html
@@ -1,5 +1,5 @@
 <div ng-show="hasPendingDiscardCount">
-  <a ga-click="discard_count_form" ui-sref="discardCountForm">
+  <a eha-ga-click="discard_count_form" ui-sref="discardCountForm">
     <div class="col-md-12 alert alert-warning">
       <img src="images/dashboard-icons/add-waste-count.png" class="img-rounded"/>
       <strong><span translate>Discard count</span></strong>
