--- a/app/views/home/partials/stock-count-reminder.html
+++ b/app/views/home/partials/stock-count-reminder.html
@@ -1,5 +1,5 @@
 <div ng-show="$parent.isStockCountDue">
-  <a ga-click="stock_count_form" ui-sref="stockCountForm">
+  <a eha-ga-click="stock_count_form" ui-sref="stockCountForm">
     <div class="col-md-12 alert alert-warning">
       <img src="images/dashboard-icons/add-stock-count.png" class="img-rounded"/>
       <strong><span translate>A stock count is due today!</span></strong>
