--- a/app/views/inventory/index.html
+++ b/app/views/inventory/index.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="btn-group col-sm-2">
-      <a ui-sref="addInventory" ga-click="add_inventory" class="btn btn-default">
+      <a ui-sref="addInventory" eha-ga-click="add_inventory" class="btn btn-default">
         <span><i class="fa fa-plus"></i></span>
         <span translate>Add New Inventory</span>
       </a>
     </div>
     <div class="btn-group col-sm-2">
-      <a ui-sref="incomingLog" ga-click="incoming_log" class="btn btn-default">
+      <a ui-sref="incomingLog" eha-ga-click="incoming_log" class="btn btn-default">
         <span><i class="fa fa-plus"></i></span>
         <span translate>Log an incoming bundle</span>
       </a>
