--- a/app/views/product-types/product-types-list.html
+++ b/app/views/product-types/product-types-list.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="btn-group col-sm-2">
-    <a ga-click="add_product_type" ui-sref="addProductTypeView" class="btn btn-default">
+    <a eha-ga-click="add_product_type" ui-sref="addProductTypeView" class="btn btn-default">
       <span><i class="fa fa-plus"></i></span>
       <span translate>Add Product Type</span>
     </a>
