--- a/app/views/app-config/edit-configuration.html
+++ b/app/views/app-config/edit-configuration.html
@@ -42,7 +42,7 @@
             <div class="panel-body"></div>
             <div class="col-sm-12">
                 <div class="col-md-4 pull-left">
-                    <button type="submit" ga-click="save" id="save" name="save" class="btn btn-success btn-lg"
+                    <button type="submit" eha-ga-click="save" id="save" name="save" class="btn btn-success btn-lg"
                             ng-click="isSubmitted = true"
                             ng-disabled="isSaving || !developerMode">
                         <span ng-show="!isSaving" translate>Save</span>
