--- a/app/views/app-config/wizard/partials/email-setup.html
+++ b/app/views/app-config/wizard/partials/email-setup.html
@@ -31,13 +31,13 @@
 
     <div class="btn-group btn-group-justified">
       <div class="btn-group">
-        <a ui-sref="appConfigWelcome" ga-click="app_config_welcome" class="btn btn-default btn-lg btn-left">
+        <a ui-sref="appConfigWelcome" eha-ga-click="app_config_welcome" class="btn btn-default btn-lg btn-left">
           <span><i class="fa fa-arrow-circle-left"></i></span>
           <span translate>Back</span>
         </a>
       </div>
       <div class="btn-group">
-        <button type="submit" ga-click="email_submit" class="btn btn-success btn-lg btn-right" ng-disabled="disableBtn" ng-click="isSubmitted = true">
+        <button type="submit" eha-ga-click="email_submit" class="btn btn-success btn-lg btn-right" ng-disabled="disableBtn" ng-click="isSubmitted = true">
           <span ng-show="!disableBtn" translate>Continue</span>
           <span ng-show="!disableBtn"><i class="fa fa-arrow-circle-right"></i></span>
           <span ng-show="disableBtn" translate>Loading</span>
