--- a/app/views/app-config/wizard/partials/facility-contact-person.html
+++ b/app/views/app-config/wizard/partials/facility-contact-person.html
@@ -16,13 +16,13 @@
       <div class="panel"></div>
         <div class="btn-group btn-group-justified">
           <div class="btn-group">
-            <button type="button" ga-click="contact_person" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_TWO)">
+            <button type="button" eha-ga-click="contact_person" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_TWO)">
               <span><i class="fa fa-arrow-circle-left"></i></span>
               <span translate>Back</span>
             </button>
           </div>
           <div class="btn-group">
-            <button type="submit" ga-click="facility" class="btn btn-success btn-lg btn-right" ng-click="isSubmitted = true">
+            <button type="submit" eha-ga-click="facility" class="btn btn-success btn-lg btn-right" ng-click="isSubmitted = true">
               <span translate>Continue</span>
               <span><i class="fa fa-arrow-circle-right"></i></span>
             </button>
