--- a/app/views/app-config/wizard/partials/facility-info.html
+++ b/app/views/app-config/wizard/partials/facility-info.html
@@ -15,13 +15,13 @@
   <div class="col-sm-15">
     <div class="btn-group btn-group-justified">
       <div class="btn-group">
-        <button type="button" ga-click="favility_info" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_ONE)">
+        <button type="button" eha-ga-click="favility_info" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_ONE)">
           <span><i class="fa fa-arrow-circle-left"></i></span>
           <span translate>Back</span>
         </button>
       </div>
       <div class="btn-group">
-        <button type="submit" ga-click="sequence_map" class="btn btn-success btn-lg btn-right" ng-click="isSubmitted = true">
+        <button type="submit" eha-ga-click="sequence_map" class="btn btn-success btn-lg btn-right" ng-click="isSubmitted = true">
           <span translate>Continue</span>
           <span><i class="fa fa-arrow-circle-right"></i></span>
         </button>
