--- a/app/views/app-config/wizard/partials/facility-product-profile.html
+++ b/app/views/app-config/wizard/partials/facility-product-profile.html
@@ -7,13 +7,13 @@
     <div class="panel"></div>
     <div class="btn-group btn-group-justified">
       <div class="btn-group">
-        <button type="button" ga-click="product_profile" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_THREE)">
+        <button type="button" eha-ga-click="product_profile" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_THREE)">
           <span><i class="fa fa-arrow-circle-left"></i></span>
           <span translate>Back</span>
         </button>
       </div>
       <div class="btn-group">
-        <button type="submit" ga-click="sequence_map" class="btn btn-success btn-lg btn-right" ng-click="moveTo(STEP_FIVE)">
+        <button type="submit" eha-ga-click="sequence_map" class="btn btn-success btn-lg btn-right" ng-click="moveTo(STEP_FIVE)">
           <span translate>Continue</span>
           <span><i class="fa fa-arrow-circle-right"></i></span>
         </button>
