--- a/app/views/app-config/wizard/partials/nearby-lga-setup.html
+++ b/app/views/app-config/wizard/partials/nearby-lga-setup.html
@@ -7,13 +7,13 @@
     <div class="panel"></div>
     <div class="btn-group btn-group-justified">
           <div class="btn-group">
-            <button ga-click="facility_setup" type="button" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_FIVE)">
+            <button eha-ga-click="facility_setup" type="button" class="btn btn-default btn-lg btn-left" ng-click="moveTo(STEP_FIVE)">
               <span><i class="fa fa-arrow-circle-left"></i></span>
               <span translate>Back</span>
             </button>
           </div>
           <div class="btn-group">
-            <button type="submit" ga-click="ccu_setup" class="btn btn-success btn-lg btn-right" ng-click="save()" ng-disabled="isSaving">
+            <button type="submit" eha-ga-click="ccu_setup" class="btn btn-success btn-lg btn-right" ng-click="save()" ng-disabled="isSaving">
               <span ng-if="!isSaving" translate>Save</span>
               <span ng-if="!isSaving"><i class="fa fa-floppy-o"></i></i></span>
               <span ng-if="isSaving" translate>Saving</span>
