--- a/app/views/batches/index.html
+++ b/app/views/batches/index.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="btn-group col-sm-2">
-    <a ui-sref="addBatchView" ga-click="add_batch_view" class="btn btn-default">
+    <a ui-sref="addBatchView" eha-ga-click="add_batch_view" class="btn btn-default">
       <span><i class="fa fa-plus"></i></span>
       <span>Add Batch</span></a>
   </div>
