--- a/app/views/bundles/partials/facility/add-new-facility.html
+++ b/app/views/bundles/partials/facility/add-new-facility.html
@@ -1,5 +1,5 @@
 <div class="col-sm-12">
-    <select class="form-control" ga-click="select_sender_lga" ng-model="selectedLGA" ng-change="getWards(selectedLGA)" ng-required="true">
+    <select class="form-control" eha-ga-click="select_sender_lga" ng-model="selectedLGA" ng-change="getWards(selectedLGA)" ng-required="true">
         <option value="" ng-bind="LGALabel"></option>
         <option value="{{lga._id}}" ng-repeat="lga in lgas">{{lga.name}}</option>
 
@@ -8,7 +8,7 @@
 <br/>
 <div class="col-sm-12">
     <select class="form-control"
-            ga-click="select_sender_Ward"
+            eha-ga-click="select_sender_Ward"
             ng-model="selectedWard"
             ng-change="getFacilities(selectedWard)"
             ng-required="true"
@@ -20,7 +20,7 @@
 <br/>
 <div class="col-sm-12">
     <select class="form-control"
-            ga-click="select_facility"
+            eha-ga-click="select_facility"
             ng-model="placeholder.selectedFacility"
             ng-change="setFacility()" ng-required="true"
             ng-disabled="facilities.length=== 0">
