--- a/app/views/home/dashboard.html
+++ b/app/views/home/dashboard.html
@@ -1,7 +1,7 @@
 <div ng-if="productsUnset">
   <div class="alert alert-warning">
     <span translate>Product settings are unset, please define them</span>
-    <a ga-click="home_settings_facility" ui-sref="home.index.settings.facility" class="alert-link"
+    <a eha-ga-click="home_settings_facility" ui-sref="home.index.settings.facility" class="alert-link"
       translate
     >Inventory settings</a>
   </div>
