--- a/app/views/home/main-activity.html
+++ b/app/views/home/main-activity.html
@@ -6,28 +6,28 @@
         </accordion-heading>
 
         <div class="col-md-3 col-xs-6 btn">
-            <a ga-click="stock_count" ui-sref="stockCountHome" id="t2">
+            <a eha-ga-click="stock_count" ui-sref="stockCountHome" id="t2">
                 <img src="images/dashboard-icons/stock-count.png" class="img-rounded">
                 <span translate class="main-activity-link">Stock Count</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
-            <a ga-click="discard_count_home" ui-sref="wasteCountHome">
+            <a eha-ga-click="discard_count_home" ui-sref="wasteCountHome">
                 <img src="images/dashboard-icons/add-waste-count.png" class="img-rounded">
                 <span translate class="main-activity-link">Waste Count</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
-            <a ga-click="stock_out_alert" ui-sref="broadcastStockOut">
+            <a eha-ga-click="stock_out_alert" ui-sref="broadcastStockOut">
                 <img src="images/dashboard-icons/stock-out-broadcast.png" class="img-rounded">
                 <span translate class="main-activity-link">Stock-out Alert</span>
             </a>
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
-            <a ga-click="report_ccu_breakdown" ui-sref="reportCcuBreakdown">
+            <a eha-ga-click="report_ccu_breakdown" ui-sref="reportCcuBreakdown">
                 <img src="images/dashboard-icons/ccu-breakdown.png" class="img-rounded">
                 <span translate class="main-activity-link">CCU Breakdown</span>
             </a>
@@ -56,7 +56,7 @@
         </accordion-heading>
 
         <div class="col-md-3 col-xs-6 btn">
-            <a ga-click="app_config" ui-sref="appConfig.edit">
+            <a eha-ga-click="app_config" ui-sref="appConfig.edit">
                 <img src="images/dashboard-icons/app-config.png" class="img-rounded">
                 <span translate class="main-activity-link">App Config</span>
             </a>
