--- a/app/views/partials/notifications.html
+++ b/app/views/partials/notifications.html
@@ -28,8 +28,8 @@
     <div class="dropdown_footer">
       <a href="#" class="btn btn-sm btn-default">Show all</a>
       <div class="pull-right dropdown_actions">
-        <a href="#" ga-click="refresh"><i class="fa fa-refresh"></i></a>
-        <a href="#" ga-click="cog"><i class="fa fa-cog"></i></a>
+        <a href="#" eha-ga-click="refresh"><i class="fa fa-refresh"></i></a>
+        <a href="#" eha-ga-click="cog"><i class="fa fa-cog"></i></a>
       </div>
     </div>
   </li>
