--- a/app/views/stock-out-broadcast/stock-out-broadcast.html
+++ b/app/views/stock-out-broadcast/stock-out-broadcast.html
@@ -15,7 +15,7 @@
                   <div class="form-group" ng-class="{ 'has-error': ((stockOutBroadcastForm.productType).$error).required
                       && stockOutForm.isSubmitted }">
                     <label for="productType" translate>Select product type</label>
-                    <select ga-click="product_type_select" id="productType" name="productType" class="form-control" ng-model="stockOutForm.productType"
+                    <select eha-ga-click="product_type_select" id="productType" name="productType" class="form-control" ng-model="stockOutForm.productType"
                             required>
                       <option value="" translate>Select product type</option>
                       <option ng-repeat="productType in productTypes" value="{{ productType }}" required>
@@ -28,7 +28,7 @@
                   <div class="row">
                     <div class="panel-body"></div>
                     <div class="col-md-4 center-block">
-                      <button ga-click="stock_out_submit" type="submit" id="send" name="send" class="btn btn-lg btn-danger"
+                      <button eha-ga-click="stock_out_submit" type="submit" id="send" name="send" class="btn btn-lg btn-danger"
                               ng-click="stockOutForm.isSubmitted = true" ng-disabled="isSaving">
                         <span ng-show="!isSaving" translate>Send</span>
                         <span ng-show="!isSaving"><i class="fa fa-bullhorn"></i></span>
