--- a/app/views/bundles/partials/bundle-line.html
+++ b/app/views/bundles/partials/bundle-line.html
@@ -61,15 +61,15 @@
 <div class="col-sm-12"
      ng-if="productIsVaccine(selectedProduct[bundleLine.id],bundleLine)">
     <label>VVM Status <i class="fa fa-sort-amount-desc"></i></label></label>
-    <span class="dropdown">
-      <a href class="dropdown-toggle form-control clearfix">
+    <span class="dropdown" dropdown>
+      <a  class="dropdown-toggle form-control clearfix" dropdown-toggle>
           <span ng-if="bundleLine.VVMStatus" class="pull-left">
               <span ng-if="bundleLine.VVMStatus.value === VVMStatus.NoVVM">No VVM Status</span>
               <span ng-if="bundleLine.VVMStatus.value !== VVMStatus.NoVVM"><img ng-src="images/vvm-icons/{{bundleLine.VVMStatus.imageSrc}}" class="vvm-icon-sm" /></span>
           </span>
           <span class="pull-right"><i class="caret"></i></span>
       </a>
-      <ul class="dropdown-menu vvm-icon-dropdown">
+      <ul class="dropdown-menu vvm-icon-dropdown" dropdown-menu>
        <li ng-repeat="vvm in vvmOptions">
           <a href ng-click="selectVVMOption(bundleLine, {value: vvm.value, imageSrc: vvm.imageSrc})" class="dropdown-toggle">
             <span ng-if="vvm.value === VVMStatus.NoVVM" ng-bind="vvm.imageSrc"></span>
