--- a/app/views/bundles/partials/bundle-line.html
+++ b/app/views/bundles/partials/bundle-line.html
@@ -43,7 +43,13 @@
 <br/>
 <div class="col-sm-12" ng-class="">
     <label>Expiry date <i class="fa fa-calendar"></i></label></label>
-    <input ng-model="bundleLine.expiryDate" class="form-control" type="date" name="expiryDate$index" required />
+    <input
+        ng-model="bundleLine.expiryDate"
+        class="form-control"
+        type="date"
+        name="expiryDate$index"
+        required
+        />
     <em><small><span  class="text-danger small" ng-show="expiredProductAlert(bundleLineForm.expiryDate$index.$modelValue)">
         <i class="fa fa-exclamation-circle"></i>
         This product is expired
