--- a/app/views/stock-count/stock-count-form.html
+++ b/app/views/stock-count/stock-count-form.html
@@ -174,6 +174,7 @@
               <div class="col-sm-12">
                 <div class="row">
                   <div class="col-sm-12">
+                    <div class="text-right"><strong><em>* Stock Items newly added</em></strong></div>
                     <div class="panel panel-default">
                       <table class="table table-bordered">
                         <thead>
@@ -186,10 +187,12 @@
                         <tr ng-repeat="productProfile in selectedProductProfiles" ng-click="edit(productProfile.uuid)">
                           <td ng-bind="productProfile.name"></td>
                           <td>
-                            <span ng-if="stockCount.unopened[productProfile.uuid] !== undefined">
-                              <span ng-bind="stockCount.unopened[productProfile.uuid]"></span>
-                              <span ng-bind="productProfile.product.base_uom.symbol"></span><span ng-if="stockCount.unopened[productProfile.uuid] !== 1">s</span>
+                            <span ng-if="stockCount.unopened[productProfile.uuid] !== undefined" ng-bind="stockCount.unopened[productProfile.uuid]"></span>
+                            <span ng-if="stockCount.unopened[productProfile.uuid] === undefined">
+                              <span>0</span>
+                              <span> *</span>
                             </span>
+                            <span ng-bind="productProfile.product.base_uom.symbol"></span><span ng-if="stockCount.unopened[productProfile.uuid] !== 1">s</span>
                           </td>
                         </tr>
                         </tbody>
