--- a/app/views/bundles/partials/preview-log-bundle.html
+++ b/app/views/bundles/partials/preview-log-bundle.html
@@ -25,7 +25,10 @@
                 <td>{{$index + 1}}</td>
                 <td class="text-center" ng-bind="line.productProfile.name"></td>
                 <td class="text-center" >{{line.batchNo}}</td>
-                 <td class="text-center" ><img ng-if="line.VVMStatus !== ''" src="images/vvm-icons/{{line.VVMStatus.imageSrc}}" class="vvm-icon-sm"/></td>
+                <td class="text-center">
+                  <img ng-if="line.VVMStatus.imageSrc" ng-src="images/vvm-icons/{{line.VVMStatus.imageSrc}}" class="vvm-icon-sm"/>
+                  <span ng-if="!line.VVMStatus.imageSrc" translate>No VVM Status</span>
+                </td>
                 <td class="text-center">
                     {{ line.expiryDate | date:'MMM, yyyy' }}
                     <span ng-show="expiredProductAlert(line.expiryDate,previewBundle.receivedOn)" class="text-danger">
