refactor(home): remove sidebar and nav
These were left over from when Move (formerly LoMIS) was in its prototyping
phase.

Closes #195.

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -4,6 +4,7 @@
     <div ng-repeat="reminder in reminders">
       <div ng-include="'views/reminder/reminder-notification.html'"></div>
     </div>
-    <div ui-view="nav"></div>
+    <div ui-view="charts"></div>
+    <div ui-view="activities"></div>
   </div>
 </div>
