--- a/app/views/index/header.html
+++ b/app/views/index/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-      <a ui-sref="home.index.home.mainActivity" eha-ga-click="LoMIS" class="navbar-brand">
+      <a ui-sref="home.mainActivity" eha-ga-click="LoMIS" class="navbar-brand">
         <span class="fa fa-home"></span>
         <span>LoMIS</span>
       </a>
