refactor: extract counter directive
See: https://github.com/eHealthAfrica/angular-eha.counter

Closes #205.

--- a/app/views/bundles/partials/bundle-line.html
+++ b/app/views/bundles/partials/bundle-line.html
@@ -100,9 +100,11 @@
 <div class="col-sm-12" align="center">
     <p><span class="fa fa-2x">{{selectedProductName[bundleLine.id]}}</span></p>
     <label>Verify Quantity : {{selectedProductUOMName[bundleLine.id]}}</label>
-    <counter bind="bundleLine.count"
-             onchange="updateUnitQty(selectedProductUOMVal[bundleLine.id],  bundleLine.count, bundleLine)"
-             required name="counter$index"></counter>
+    <eha-counter
+      bind="bundleLine.count"
+      onchange="updateUnitQty(selectedProductUOMVal[bundleLine.id], bundleLine.count, bundleLine)"
+      required
+    ></eha-counter>
 
          <span class="fa fa-1.5x text-center"><ng-pluralize
                  count="bundleLine.quantity"
