--- a/app/views/inventory/forms/partials/add-inventory-line.html
+++ b/app/views/inventory/forms/partials/add-inventory-line.html
@@ -61,7 +61,7 @@
 
       <div class="col-sm-4">
         <label translate>Quantity</label>
-        <counter bind="inventoryLine.quantity"></counter>
+        <eha-counter bind="inventoryLine.quantity"></eha-counter>
       </div>
 
       <div class="col-sm-4">
