--- a/app/views/stock-count/stock-count-form.html
+++ b/app/views/stock-count/stock-count-form.html
@@ -100,7 +100,7 @@
                       <!-- start form counter input -->
                       <div class="col-xs-12">
                         <div>
-                          <counter bind="countValue[productKey]"></counter>
+                          <eha-counter bind="countValue[productKey]"></eha-counter>
                           <div ng-show="productError" class="custom-error text-center">{{ productErrorMsg }}</div>
 
                           <!-- conversion view starts here -->
