--- a/app/views/waste-count/waste-count-form2.html
+++ b/app/views/waste-count/waste-count-form2.html
@@ -94,7 +94,7 @@
 
         <div class="form-group" ng-show="(selectedReason !== undefined &&  selectedReason !== '') && productKey !== ''">
           <label>{{ enterQuantityLabel }}</label>
-          <counter onChange="change()" bind="reasonQuantity"></counter>
+          <eha-counter onChange="change()" bind="reasonQuantity"></eha-counter>
         </div>
       </div>
     </div>
