--- a/app/views/inventory/partials/add-inventory-line.html
+++ b/app/views/inventory/partials/add-inventory-line.html
@@ -52,9 +52,7 @@
     <div class="col-sm-18">
       <div class="col-sm-4">
         <label translate>Quantity</label>
-
-         <counter bind="inventoryLine.quantity"></counter>
-
+         <eha-counter bind="inventoryLine.quantity"></eha-counter>
       </div>
 
       <div class="col-sm-4">
