--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -42,7 +42,10 @@
               spellcheck="false">
         </div>
         <button type="submit" class="btn btn-success" ng-disabled="!online">
-            <i class="fa fa-chevron-circle-right"></i>
+            <i
+              class="fa"
+              ng-class="isAuthenticating && 'fa-spinner fa-spin' || 'fa-chevron-circle-right'"
+            ></i>
             <span translate>Login</span>
         </button>
         <button type="submit" class="btn btn-default" ng-click="cancel()">
