added consumption module

--- a/app/views/home/main-activity.html
+++ b/app/views/home/main-activity.html
@@ -27,9 +27,9 @@
         </div>
 
         <div class="col-md-3 col-xs-6 btn">
-            <a eha-ga-click="report_ccu_breakdown" ui-sref="reportCcuBreakdown">
+            <a eha-ga-click="report_ccu_breakdown" ui-sref="consumption-home">
                 <img src="images/dashboard-icons/ccu-breakdown.png" class="img-rounded">
-                <span translate class="main-activity-link">CCU Breakdown</span>
+                <span translate class="main-activity-link">Consumption</span>
             </a>
         </div>
 
